@@ -1,39 +1,0 @@
-@comment $NetBSD: PLIST,v 1.4 2012/05/02 12:34:56 obache Exp $
-${GEM_HOME}/cache/${GEM_NAME}.gem
-${GEM_LIBDIR}/.document
-${GEM_LIBDIR}/.gemtest
-${GEM_LIBDIR}/.gitignore
-${GEM_LIBDIR}/.rspec
-${GEM_LIBDIR}/.travis.yml
-${GEM_LIBDIR}/.yardopts
-${GEM_LIBDIR}/CHANGELOG.md
-${GEM_LIBDIR}/Gemfile
-${GEM_LIBDIR}/Guardfile
-${GEM_LIBDIR}/LICENSE.md
-${GEM_LIBDIR}/README.md
-${GEM_LIBDIR}/Rakefile
-${GEM_LIBDIR}/examples/growl_daemon.rb
-${GEM_LIBDIR}/examples/oauth.rb
-${GEM_LIBDIR}/examples/userstream.rb
-${GEM_LIBDIR}/lib/tweetstream.rb
-${GEM_LIBDIR}/lib/tweetstream/client.rb
-${GEM_LIBDIR}/lib/tweetstream/configuration.rb
-${GEM_LIBDIR}/lib/tweetstream/daemon.rb
-${GEM_LIBDIR}/lib/tweetstream/direct_message.rb
-${GEM_LIBDIR}/lib/tweetstream/error.rb
-${GEM_LIBDIR}/lib/tweetstream/hash.rb
-${GEM_LIBDIR}/lib/tweetstream/status.rb
-${GEM_LIBDIR}/lib/tweetstream/user.rb
-${GEM_LIBDIR}/lib/tweetstream/version.rb
-${GEM_LIBDIR}/spec/data/direct_messages.json
-${GEM_LIBDIR}/spec/data/statuses.json
-${GEM_LIBDIR}/spec/spec_helper.rb
-${GEM_LIBDIR}/spec/tweetstream/client_spec.rb
-${GEM_LIBDIR}/spec/tweetstream/daemon_spec.rb
-${GEM_LIBDIR}/spec/tweetstream/direct_message_spec.rb
-${GEM_LIBDIR}/spec/tweetstream/hash_spec.rb
-${GEM_LIBDIR}/spec/tweetstream/parser_spec.rb
-${GEM_LIBDIR}/spec/tweetstream/status_spec.rb
-${GEM_LIBDIR}/spec/tweetstream_spec.rb
-${GEM_LIBDIR}/tweetstream.gemspec
-${GEM_HOME}/specifications/${GEM_NAME}.gemspec
